Add header and announcement bar on all pages excluding landing and make it responsive

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -5,6 +5,7 @@
   data-product-id="{{ product.id }}"
   data-update-url="true"
   data-url="{{ product.url }}"
+  style="padding-top: 15rem;"
   {% if section.settings.image_zoom == 'hover' %}
     data-zoom-on-hover
   {% endif %}
